[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'zx'
version = '0.13.14'
description = 'ZX Spectrum emulation framework'
readme = 'README.md'
license = {text = 'MIT'}
authors = [
  {name = 'Ivan Kosarev', email = 'mail@ivankosarev.com'}
]
dependencies = [
  'pysdl2',
  'pysdl2-dll',
  'numpy',
]
requires-python = '>=3.10'
classifiers = [
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: Implementation :: CPython',
]

[project.urls]
Homepage = 'https://github.com/kosarev/zx/'

[project.scripts]
zx = 'zx:main'

[tool.setuptools]
packages = ['zx']

[tool.setuptools.package-data]
zx = ['roms/*', 'fonts/*', 'py.typed']

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
test-command = "python -c \"import zx\""
